--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@shopify/theme-rte": "^1.0.0-alpha.7",
     "@shopify/theme-sections": "^1.1.0",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
+    "axios": "^0.18.0",
     "jquery": "^3.2.1",
     "lazysizes": "^4.1.1",
     "lodash-es": "^4.17.4",
