--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@shopify/slate-tools": "1.0.0-beta.14",
     "babel-preset-shopify": "^16.2.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-shopify": "^19.0.0",
     "stylelint-config-prettier": "^3.0.4",
     "stylelint-config-shopify": "^5.0.0",
