--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,14 @@
     "document": true,
     "window": true,
     "Shopify": true,
-    "theme": true
+    "theme": true,
+    "CustomEvent": true
+  },
+    "settings": {
+    "import/resolver": {
+      "alias": [
+        ["@", "./src"]
+       ]
+     }
   }
 }
