--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-shopify": "^16.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-shopify": "^19.0.0",
+    "husky": "^2.4.0",
     "stylelint-config-prettier": "^3.0.4",
     "stylelint-config-shopify": "^5.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
@@ -47,5 +48,10 @@
     "zip": "slate-tools build && slate-tools zip",
     "lint": "slate-tools lint",
     "format": "slate-tools format"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format"      
+    }
   }
 }
