--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@shopify/theme-cart": "^1.0.0-alpha.7",
     "@shopify/theme-currency": "^1.0.0-alpha.7",
     "@shopify/theme-images": "^1.0.0-alpha.7",
+    "@shopify/theme-product": "^3.0.0",
+    "@shopify/theme-product-form": "^3.0.0",
     "@shopify/theme-rte": "^1.0.0-alpha.7",
     "@shopify/theme-sections": "^1.1.0",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
