--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@shopify/theme-a11y": "^3.0.0",
     "@shopify/theme-addresses": "^3.0.0",
-    "@shopify/theme-cart": "^1.0.0-alpha.7",
+    "@shopify/theme-cart": "^3.0.0",
     "@shopify/theme-currency": "^1.0.0-alpha.7",
     "@shopify/theme-images": "^1.0.0-alpha.7",
     "@shopify/theme-product": "^3.0.0",
@@ -36,11 +36,13 @@
     "@shopify/theme-rte": "^1.0.0-alpha.7",
     "@shopify/theme-sections": "^1.1.0",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
+    "es6-promise": "^4.2.8",
     "jquery": "^3.2.1",
     "lazysizes": "^4.1.1",
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
-    "qrcode": "^1.3.2"
+    "qrcode": "^1.3.2",
+    "unfetch": "^4.1.0"
   },
   "scripts": {
     "start": "slate-tools start",
