Add handlebars and raw-loader packages

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-shopify": "^19.0.0",
     "husky": "^2.4.0",
+    "raw-loader": "^3.1.0",
     "stylelint-config-prettier": "^3.0.4",
     "stylelint-config-shopify": "^5.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
@@ -37,6 +38,7 @@
     "@shopify/theme-sections": "^1.1.0",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
     "es6-promise": "^4.2.8",
+    "handlebars-loader": "^1.7.1",
     "jquery": "^3.2.1",
     "lazysizes": "^4.1.1",
     "lodash-es": "^4.17.4",
